--- a/Pages/CSS/index.css
+++ b/Pages/CSS/index.css
@@ -29,7 +29,6 @@
 }
 #brand
 {
-    font-size: 2.5vw;
     letter-spacing: 4px;
 }
 #slogan_txt
@@ -43,10 +42,10 @@
 {
     text-align: center;
 }
-#abt-us
+/*#abt-us
 {
     font-size: 1.2vw;
-}
+}*/
 .active
 {
     color: #FDD000 !important;
@@ -149,7 +148,14 @@ a.rdv :hover
     bottom: 8px;
     right: 16px;
 }
-@media screen and (max-width: 600px) 
+@media screen and (max-width: 550px) 
+{
+    .imagetxt_title .imagetxt_p
+    {
+        display: flex;
+    }
+}
+@media screen and (max-width: 790px) 
 {
     .home_txt
     {
